# uFixels

./: Cargo.toml  LICENSE-MIT  METHODS.md  README.md
src/: connectivity.rs  cortex_kdtree.rs  end_condition.rs  lib.rs  no_end_mask.rs  normal.rs  sheets.rs  surface_io.rs  surface_mask.rs  traversal.rs  ufixel.rs
src/sheet_link/: direction.rs  filtration.rs  mod.rs  ptt_link.rs
tests/: synthetic.rs
