[package]
name = "ufixels"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Matt Cieslak <mattcieslak@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Surface-normal-driven detection of u-fiber-compatible fixels in superficial white matter."


[dependencies]
odx-rs           = { version = "0.1.0", git = "https://github.com/PennLINC/odx-rs",           tag = "v0.1.0" }
gifti-rs         = { version = "0.1.0", git = "https://github.com/PennLINC/gifti-rs",         tag = "v0.1.0" }
odx-tractography = { version = "0.1.0", git = "https://github.com/PennLINC/odx-tractography", tag = "v0.1.0" }
kiddo = "5"
nalgebra = "0.33"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "ufixels"
path = "src/bin/ufixels.rs"
